FAVRDK-52: Fix hover on section with negativ top spacing.

--- a/webroot/sites/favrskov.dk/themes/custom/favrskov/build-assets/src/_base/_grid.css
+++ b/webroot/sites/favrskov.dk/themes/custom/favrskov/build-assets/src/_base/_grid.css
@@ -29,6 +29,8 @@
   &--spacing-top-negative {
     padding-top: 0;
     margin-top: calc(var(--grid-section-spacing) * -1);
+    position: relative;
+    z-index: 3;
   }
 
   &--spacing-top-none {
